# posish

./: .gitignore  COPYRIGHT  Makefile  README.md  build.sh  dash  freebsd-sh  meson.build  shellbench
.agent/rules/: posish.md
debian/: changelog  control  copyright  debhelper-build-stamp  files  install
docs/: ARCHITECTURE.md  BUILTINS.md  COMPLIANCE.md  PERFORMANCE.md  USER_GUIDE.md
include/: alias.h  ast.h  bltin.h  buf_output.h  builtins.h  error.h  executor.h  functions.h  input.h  jobs.h  lexer.h  line_editor.h  mem_stack.h  memalloc.h  output.h  parser.h  redirection.h  shell_options.h  signals.h  variables.h
src/: alias.c  ast.c  buf_output.c  error.c  executor.c  functions.c  input.c  jobs.c  lexer.c  line_editor.c  main.c  mem_stack.c  memalloc.c  output.c  parser.c  posish.1  redirection.c  shell_options.c  signals.c  variables.c
src/builtin-cmds/: alias_cmd.c  bg.c  break.c  cd.c  command.c  continue.c  dispatcher.c  dot.c  echo.c  eval.c  exec.c  exit.c  export.c  fg.c  getopts.c  jobid.c  jobs.c  kill.c  local.c  printf.c  pwd.c  read.c  readonly.c  return.c  set.c  shift.c  test.c  times.c  trap.c  true_false.c  type.c  typeset.c  umask.c  unalias.c  unset.c  wait.c
tests/: test_posish.py
